--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <main>
       <article id="main-sections"></article>
-      <article id="subsections"></article>
+      <article class="subsections"></article>
     </main>
   </body>
 </html>
