--- a/about-us.html
+++ b/about-us.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Onatrix</title>
-  <script defer src="main543ba5b4ba94704cfca8.js"></script></head>
+  <script defer src="main.6c69bb50e3a387dee74a.js"></script></head>
   <style>
     html {
       visibility: hidden;
