--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
         visibility: hidden;
       }
     </style>
-  <script defer src="main833d6029b571a20785a9.js"></script></head>
+  <script defer src="main.953e6f686b2faae6082a.js"></script></head>
   <body>
     <main>
       <article id="main-sections"></article>
