--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         visibility: hidden;
       }
     </style>
-  <script defer src="mainef449fd3c5a57567baf9.js"></script></head>
+  <script defer src="main.1f102dae5c6eaaba5ed3.js"></script></head>
   <body>
     <main>
       <article id="main-sections"></article>
