--- a/about-us.html
+++ b/about-us.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Onatrix</title>
-  <script defer src="main.f1400d341027b7bac61b.js"></script></head>
+    <title>O nas</title>
+  <script defer src="main.894ca3cc326f7985e39c.js"></script></head>
   <style>
     html {
       visibility: hidden;
