--- a/contact.html
+++ b/contact.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Onatrix</title>
+    <title>Kontakt</title>
     <style>
       /* prevent FOUC */
       html {
         visibility: hidden;
       }
     </style>
-  <script defer src="main.f2457702100c44402854.js"></script></head>
+  <script defer src="main.eeb82c919befb83f6e3f.js"></script></head>
   <body>
     <main>
       <article id="main-sections"></article>
