--- a/foreigners.html
+++ b/foreigners.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Onatrix</title>
+    <title>Sprzedaż nieruchomości przez cudzoziemca</title>
     <style>
       /* prevent FOUC */
       html {
         visibility: hidden;
       }
     </style>
-  <script defer src="main.71e85de0ec607e327bc1.js"></script></head>
+  <script defer src="main.ee6f18cd299dd0648380.js"></script></head>
   <body>
     <main>
       <article id="main-sections"></article>
