--- a/guides.html
+++ b/guides.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Onatrix</title>
+    <title>Poradnik</title>
     <style>
       /* prevent FOUC */
       html {
         visibility: hidden;
       }
     </style>
-  <script defer src="main.d5fd95d0a858f4a44abd.js"></script></head>
+  <script defer src="main.dd7ce28efda010e54b5a.js"></script></head>
   <body>
     <main>
       <article id="main-sections"></article>
