--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Onatrix</title>
+    <title>Onatrix - Strona Główna</title>
     <style>
       /* prevent FOUC */
       html {
         visibility: hidden;
       }
     </style>
-  <script defer src="main.b68454c856092784390b.js"></script></head>
+  <script defer src="main.f2bf60b4878fe8928a53.js"></script></head>
   <body>
     <main>
       <article id="main-sections"></article>
