--- a/living-abroad.html
+++ b/living-abroad.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Onatrix</title>
+    <title>Sprzedaż nieruchomości za granicą</title>
     <style>
       /* prevent FOUC */
       html {
         visibility: hidden;
       }
     </style>
-  <script defer src="main.5c32e5d5d06587ba57ba.js"></script></head>
+  <script defer src="main.56f2f823dc609eda8e0c.js"></script></head>
   <body>
     <main>
       <article id="main-sections"></article>
