--- a/living-in-germany.html
+++ b/living-in-germany.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Onatrix</title>
+    <title>Sprzedaż nieruchomości W Niemczech</title>
     <style>
       /* prevent FOUC */
       html {
         visibility: hidden;
       }
     </style>
-  <script defer src="main.d1c8256d4db051976da3.js"></script></head>
+  <script defer src="main.374e49442d7856a9cf88.js"></script></head>
   <body>
     <main>
       <article id="main-sections"></article>
