--- a/main-article.html
+++ b/main-article.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Onatrix</title>
+    <title>Sprzedaż nieruchomości za granicą</title>
     <style>
       /* prevent FOUC */
       html {
         visibility: hidden;
       }
     </style>
-  <script defer src="main.d802a56fc47773afde59.js"></script></head>
+  <script defer src="main.acde0e714cd9aa61f906.js"></script></head>
   <body>
     <main>
       <article id="main-sections"></article>
