--- a/opinions.html
+++ b/opinions.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Onatrix</title>
+    <title>Opinie</title>
     <style>
       /* prevent FOUC */
       html {
         visibility: hidden;
       }
     </style>
-  <script defer src="main.d838fb075bd73bba047c.js"></script></head>
+  <script defer src="main.d8295a23d0b9badf4c09.js"></script></head>
   <body>
     <main>
       <article id="main-sections"></article>
