--- a/services.html
+++ b/services.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Onatrix</title>
+    <title>Usługi</title>
     <style>
       /* prevent FOUC */
       html {
         visibility: hidden;
       }
     </style>
-  <script defer src="main.53268a03cbb5c4ca586d.js"></script></head>
+  <script defer src="main.1264feb3883c14fcf95a.js"></script></head>
   <body>
     <main>
       <article id="main-sections"></article>
