--- a/sprzedaz-mieszkania-mieszkajac-w-niemczech.html
+++ b/sprzedaz-mieszkania-mieszkajac-w-niemczech.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sprzedaż nieruchomości za granicą</title>
+    <title>Sprzedaż nieruchomości W Niemczech</title>
     <style>
       /* prevent FOUC */
       html {
         visibility: hidden;
       }
     </style>
-  <script defer src="main.0368b97ef136c918e00d.js"></script></head>
+  <script defer src="main.09213ece648e266fb1f0.js"></script></head>
   <body>
     <main>
       <article id="main-sections"></article>
