--- a/sprzedaz-mieszkania-za-granica.html
+++ b/sprzedaz-mieszkania-za-granica.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sprzedaż nieruchomości W Niemczech</title>
+    <title>Sprzedaż mieszkania za granicą</title>
     <style>
       /* prevent FOUC */
       html {
         visibility: hidden;
       }
     </style>
-  <script defer src="main.ac5287dd6310b8b6564c.js"></script></head>
+  <script defer src="main.f48f36f3e26b503c722c.js"></script></head>
   <body>
     <main>
       <article id="main-sections"></article>
